--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>WebStudio</title>
 </head>
 <body>
+    <!--что делать с фото и нужны ли ссылки в футере-->
     <!-- Шапка сайта -->
     <header>
         <nav>
-            <a href="/">
-                <h1>WebStudio</h1> <!--либо h1 нужно спросить на занятии-->
+            <a href="./index.html">
+                WebStudio
             </a>
             <ul>
                 <li><a href="">Студия</a></li>
@@ -27,24 +28,74 @@
     <main>
         <!-- Герой -->
         <section>
-            <h2>Greeting</h2>
-            <!--фото на заднем фоне или background color нужно спросить на занятии-->
+            <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
+        </section>
+        <section>
+            <h2>Преимущества</h2>
+            <ul>
+                <li>
+                    <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                </li>
+                <li>
+                    <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                </li>
+                <li>
+                    <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                </li>
+                <li>
+                    <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Чем мы занимаемся</h2>
+            <ul>
+                <li><img src="./images/laptop.jpg" alt="программист работает за столом" width="370" height="294" /></li>
+                <li><img src="./images/laptop_and_phone.jpg" alt="дизайнеры разрабатывают приложение для смартфонов " width="370"
+                        height="294" /></li>
+                <li><img src="./images/color_palette.jpg" alt="художник веб-дизайна с рабочей таблицей выбора цвета" width="370"
+                        height="294" /></li>
+            </ul>
+        </section>
+        <section>
+            <h2>Наша команда</h2>
+            <ul>
+                <li><img src="./images/man_in_glasses.jpg" alt="Игорь Демьяненко" width="270" height="260" />
+                    <h3>Игорь Демьяненко</h3>
+                    <p>Product Designer</p>
+                </li>
+                <li><img src="./images/women.jpg" alt="Ольга Репина" width="270" height="260" />
+                    <h3>Ольга Репина</h3>
+                    <p>Frontend Developer</p>
+                </li>
+                <li><img src="./images/man.jpg" alt="Николай Тарасов" width="270" height="260" />
+                    <h3>Николай Тарасов</h3>
+                    <p>Marketing</p>
+                </li>
+                <li><img src="./images/man_in_glasses.jpg" alt="Михаил Ермаков" width="270" height="260" />
+                    <h3>Михаил Ермаков</h3>
+                    <p>UI Designer</p>
+                </li>
+            </ul>
         </section>
     </main>
     <!-- Футер -->
     <footer>
-        <a href="/">
-            <h2>WebStudio</h2>
-            <!--p либо h1 нужно спросить на занятии-->
+        <a href="./index.html">
+            WebStudio
         </a>
         <address>
-            г. Киев, пр-т Леси Украинки, 26
-        </address>
+          <p>  г. Киев, пр-т Леси Украинки, 26</p>
         <ul>
             <li><a class="contacts_link" href="mailto:info@example.com">info@example.com</a></li>
             <li><a class="contacts_link" href="tel:+380991111111">+38 099 111 11 11</a></li>
         </ul>
+    </address>
     </footer>
 </body>
 </html>
